--- a/3FTPd/3FTPd.fsproj
+++ b/3FTPd/3FTPd.fsproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{58d6d2ca-34ef-43bf-b320-2d43686b64da}</ProjectGuid>
+    <ProjectGuid>{58D6D2CA-34EF-43BF-B320-2D43686B64DA}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>vfftp</RootNamespace>
     <AssemblyName>3FTPd</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <Name>3FTPd</Name>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -33,14 +33,6 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Config.fs" />
-    <Compile Include="Common.fs" />
-    <Compile Include="Proxy.fs" />
-    <Compile Include="Commands.fs" />
-    <Compile Include="Ftp.fs" />
-    <Compile Include="Model.fs" />
-    <Compile Include="Data.fs" />
-    <Compile Include="Runtime.fs" />
-    <Compile Include="Web.fs" />
     <Compile Include="Program.fs" />
     <Content Include="codemaker.pfx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -55,13 +47,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Ionic.Zlib">
-      <HintPath>..\..\..\Downloads\DotNetZip-65587\Zlib\bin\Debug\Ionic.Zlib.dll</HintPath>
-    </Reference>
     <Reference Include="mscorlib" />
-    <Reference Include="FSharp.Core" />
     <Reference Include="suave">
-      <HintPath>..\libs\suave.dll</HintPath>
+      <HintPath>..\libs\mono\suave.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -70,19 +58,13 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
-    <Reference Include="System.Data.SQLite">
-      <HintPath>..\libs\System.Data.SQLite.dll</HintPath>
-    </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Content\Content.csproj">
-      <Name>Content</Name>
-      <Project>{32a7a555-eb61-4d71-a12a-679188a7f1c5}</Project>
-      <Private>True</Private>
-    </ProjectReference>
+    <Reference Include="Ionic.Zlib">
+      <HintPath>..\libs\Ionic.Zlib.dll</HintPath>
+    </Reference>
+    <Reference Include="Mono.Data.Sqlite" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\FSharp\1.0\Microsoft.FSharp.Targets" Condition="!Exists('$(MSBuildToolsPath)\Microsoft.Build.Tasks.v4.0.dll')" />
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft F#\v4.0\Microsoft.FSharp.Targets" Condition="Exists('$(MSBuildToolsPath)\Microsoft.Build.Tasks.v4.0.dll')" />
@@ -93,4 +75,10 @@
 	<Target Name="AfterBuild">
 	</Target>
 	-->
+  <ItemGroup>
+    <ProjectReference Include="..\3FTPLib\3FTPLib.fsproj">
+      <Project>{333C085B-568F-402D-9627-5025C5766269}</Project>
+      <Name>3FTPLib</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
