--- a/3FTPLib/3FTPLib.fsproj
+++ b/3FTPLib/3FTPLib.fsproj
@@ -13,10 +13,13 @@
       <BuildOrder>
         <String>Common.fs</String>
         <String>Proxy.fs</String>
+        <String>Ports.fs</String>
         <String>Commands.fs</String>
         <String>Ftp.fs</String>
         <String>Model.fs</String>
         <String>Runtime.fs</String>
+        <String>Data.fs</String>
+        <String>Web.fs</String>
       </BuildOrder>
     </BuildOrder>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
@@ -65,6 +68,7 @@
     <Compile Include="Model.fs" />
     <Compile Include="Data.fs" />
     <Compile Include="Web.fs" />
+    <Compile Include="Ports.fs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft F#\v4.0\Microsoft.FSharp.Targets" />
 </Project>
